Add image of conch fritters to conch-fritters.html
The image of the conch fritters will enable users to recognize what the completed dish should resemble

--- a/recipes/conch-fritters.html
+++ b/recipes/conch-fritters.html
@@ -9,6 +9,7 @@
 
 <body>
     <h1>Conch Fritters</h1>
+    <img src="https://i.pinimg.com/originals/74/c8/43/74c8431b7d9e6010debe04cce6aa6c2b.jpg" alt="conch fritters">
 </body>
 
 </html>
