Add description to conch-fritters.html
Lorem Ipsum text is being utilized in place of a description of the recipe.

--- a/recipes/conch-fritters.html
+++ b/recipes/conch-fritters.html
@@ -10,6 +10,9 @@
 <body>
     <h1>Conch Fritters</h1>
     <img src="https://i.pinimg.com/originals/74/c8/43/74c8431b7d9e6010debe04cce6aa6c2b.jpg" alt="conch fritters">
+    <h2>Description</h2>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores veniam repellat cumque dolor quia consequuntur
+        hic ipsam optio minima, ad maxime rem, dolorum laudantium placeat necessitatibus eum dolorem! Commodi, fuga.</p>
 </body>
 
 </html>
