Add ingredients to conch-fritters.html
Lorem Ipsum text has been utilized in place of the list of ingredients required to cook conch fritters

--- a/recipes/conch-fritters.html
+++ b/recipes/conch-fritters.html
@@ -13,6 +13,17 @@
     <h2>Description</h2>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores veniam repellat cumque dolor quia consequuntur
         hic ipsam optio minima, ad maxime rem, dolorum laudantium placeat necessitatibus eum dolorem! Commodi, fuga.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Lorem</li>
+        <li>ipsum</li>
+        <li>dolor</li>
+        <li>sit</li>
+        <li>amet</li>
+        <li>consectetur</li>
+        <li>adipisicing</li>
+        <li>elit</li>
+    </ul>
 </body>
 
 </html>
