Add steps to conch-fritters.html
Lorem Ipsum text utilized in place of the steps required to cook conch fritters

--- a/recipes/conch-fritters.html
+++ b/recipes/conch-fritters.html
@@ -24,6 +24,16 @@
         <li>adipisicing</li>
         <li>elit</li>
     </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Ex, quo nulla non eos illum blanditiis corrupti dignissimos minus minima cumque, reiciendis laudantium ab
+            rerum debitis sed velit.</li>
+        <li>Quasi atque perferendis voluptas sit temporibus minima, ea quo.</li>
+        <li>Inventore nobis quod totam quos quo explicabo aut, delectus quae officiis.</li>
+        <li>Voluptas, sit delectus.</li>
+        <li>Deserunt qui quos tempora ab dolor numquam vero, rem commodi saepe accusantium corporis harum quisquam
+            tenetur ea voluptatibus odit soluta!</li>
+    </ol>
 </body>
 
 </html>
