Add lobster-alfredo.html link to index.html
This hyperlink will enable users to navigate to the lobster-alfredo.html page from the homepage

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/conch-fritters.html">Conch Fritters</a>
+    <a href="recipes/lobster-alfredo.html">Lobster Alfredo</a>
 </body>
 
 </html>
