Add steps to lobster-alfredo.html
Lorem Ipsum text utilized in place of the steps required to cook lobster alfredo

--- a/recipes/lobster-alfredo.html
+++ b/recipes/lobster-alfredo.html
@@ -26,6 +26,19 @@
         <li>Maiores</li>
         <li>veniam</li>
     </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Quam, aut veritatis ducimus tempore maxime incidunt odio facere earum, possimus magnam natus praesentium id
+            explicabo deserunt eveniet illo quis distinctio laboriosam.</li>
+        <li>Hic distinctio quis illo facere eaque, temporibus molestiae facilis ea accusamus autem quas laboriosam.</li>
+        <li>Totam, magni.</li>
+        <li>Dolorem ea nostrum in, beatae animi obcaecati repellat commodi deserunt impedit doloremque vel, molestiae
+            est quae possimus tempora ipsum.</li>
+        <li>Vel, voluptatibus blanditiis.</li>
+        <li>Libero tenetur, iste ea placeat omnis laudantium aliquid provident corrupti maxime voluptates cupiditate
+            dolorem excepturi.</li>
+        <li>Perspiciatis facilis quos recusandae in placeat dignissimos odio debitis enim omnis!</li>
+    </ol>
 </body>
 
 </html>
