Add shrimp-and-sausage-gumbo.html link to index.html
This hyperlink will enable users to navigate to the shrimp-and-sausage-gumbo.html page from the homepage

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>Odin Recipes</h1>
     <a href="recipes/conch-fritters.html">Conch Fritters</a>
     <a href="recipes/lobster-alfredo.html">Lobster Alfredo</a>
+    <a href="recipes/shrimp-and-sausage-gumbo.html">Shrimp and Sausage Gumbo</a>
 </body>
 
 </html>
