Add steps to shrimp-and-sausage-gumbo.html
Lorem Ipsum text utilized in place of the steps required to cook shrimp and sausage gumbo

--- a/recipes/shrimp-and-sausage-gumbo.html
+++ b/recipes/shrimp-and-sausage-gumbo.html
@@ -30,6 +30,25 @@
         <li>cumque</li>
         <li>dolor</li>
     </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Magni ducimus dolorum quibusdam earum perspiciatis minus adipisci perferendis sed ratione nam.</li>
+        <li>Natus recusandae excepturi maiores nihil, cum, ullam eligendi iusto libero numquam est vel dignissimos
+            repudiandae, vero veniam ad quisquam sit optio.</li>
+        <li>Voluptatum laudantium inventore ut laboriosam quisquam accusamus, libero eum impedit ad commodi deserunt.
+        </li>
+        <li>Tempore quaerat aliquid quia cumque aliquam molestias.</li>
+        <li>Natus, laboriosam vel exercitationem, cum dignissimos obcaecati autem sint harum, quasi quidem mollitia quas
+            magni.</li>
+        <li>Nihil dolor corrupti error vel minima expedita atque quae, explicabo iusto maxime veritatis deleniti
+            consequatur cumque.</li>
+        <li>Eius enim asperiores illo quos eligendi animi deleniti optio excepturi aliquam nostrum quisquam quia quae
+            quibusdam labore, repudiandae impedit ad non.</li>
+        <li>Magnam explicabo aliquam saepe, omnis voluptate autem quis consequuntur culpa maiores corrupti doloremque
+            mollitia nulla sapiente at sequi, minus laudantium necessitatibus.</li>
+        <li>Facere, numquam rem.</li>
+        <li>Explicabo.</li>
+    </ol>
 </body>
 
 </html>
