Create an unordered list of recipe links on index.html
Placing the links in a list will prevent them from being listed on one horizontal line

--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/conch-fritters.html">Conch Fritters</a>
-    <a href="recipes/lobster-alfredo.html">Lobster Alfredo</a>
-    <a href="recipes/shrimp-and-sausage-gumbo.html">Shrimp and Sausage Gumbo</a>
+    <ul>
+        <li><a href="recipes/conch-fritters.html">Conch Fritters</a></li>
+        <li><a href="recipes/lobster-alfredo.html">Lobster Alfredo</a></li>
+        <li><a href="recipes/shrimp-and-sausage-gumbo.html">Shrimp and Sausage Gumbo</a></li>
+    </ul>
 </body>
 
 </html>
