--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 </head>
 
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="recipes/conch-fritters.html">Conch Fritters</a></li>
-        <li><a href="recipes/lobster-alfredo.html">Lobster Alfredo</a></li>
-        <li><a href="recipes/shrimp-and-sausage-gumbo.html">Shrimp and Sausage Gumbo</a></li>
-    </ul>
+    <div>
+        <h1>Odin Recipes</h1>
+        <ul>
+            <li><a href="recipes/conch-fritters.html">Conch Fritters</a></li>
+            <li><a href="recipes/lobster-alfredo.html">Lobster Alfredo</a></li>
+            <li><a href="recipes/shrimp-and-sausage-gumbo.html">Shrimp and Sausage Gumbo</a></li>
+        </ul>
+    </div>
 </body>
 
 </html>
