--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
     <div>
         <h1>Odin Recipes</h1>
         <ul>
-            <li><a href="recipes/conch-fritters.html">Conch Fritters</a></li>
-            <li><a href="recipes/lobster-alfredo.html">Lobster Alfredo</a></li>
-            <li><a href="recipes/shrimp-and-sausage-gumbo.html">Shrimp and Sausage Gumbo</a></li>
+            <li class="recipe" id="conch-fritters"><a href="recipes/conch-fritters.html">Conch Fritters</a></li>
+            <li class="recipe" id="lobster-alfredo"><a href="recipes/lobster-alfredo.html">Lobster Alfredo</a></li>
+            <li class="recipe" id="shrimp-and-sausage-gumbo"><a href="recipes/shrimp-and-sausage-gumbo.html">Shrimp and
+                    Sausage Gumbo</a></li>
         </ul>
     </div>
 </body>
