Style the description, ingredients, and steps headings in conch-fritters.html
I added an id that correlates with the name of the heading to the ingredients and steps headings on the conch-fritters.html page. I styled each of these headings by increasing the font size, adjusting the spacing and font style of these headings, aligning the text of these headers, and adding an underline under these headers.

--- a/recipes/conch-fritters.html
+++ b/recipes/conch-fritters.html
@@ -22,7 +22,7 @@
             </p>
         </div>
         <div class="right">
-            <h2>Ingredients</h2>
+            <h2 id="ingredients">Ingredients</h2>
             <ul>
                 <li>Lorem</li>
                 <li>ipsum</li>
@@ -33,7 +33,7 @@
                 <li>adipisicing</li>
                 <li>elit</li>
             </ul>
-            <h2>Steps</h2>
+            <h2 id="steps">Steps</h2>
             <ol>
                 <li>Ex, quo nulla non eos illum blanditiis corrupti dignissimos minus minima cumque, reiciendis
                     laudantium
