--- a/recipes/conch-fritters.html
+++ b/recipes/conch-fritters.html
@@ -14,38 +14,45 @@
         <div class="left">
             <img src="https://i.pinimg.com/originals/74/c8/43/74c8431b7d9e6010debe04cce6aa6c2b.jpg"
                 alt="conch fritters">
-            <h2>Description</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores veniam repellat cumque dolor quia
-                consequuntur
-                hic ipsam optio minima, ad maxime rem, dolorum laudantium placeat necessitatibus eum dolorem! Commodi,
-                fuga.
-            </p>
+            <div class="color">
+                <h2>Description</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores veniam repellat cumque dolor quia
+                    consequuntur
+                    hic ipsam optio minima, ad maxime rem, dolorum laudantium placeat necessitatibus eum dolorem!
+                    Commodi,
+                    fuga.
+                </p>
+            </div>
         </div>
         <div class="right">
-            <h2 id="ingredients">Ingredients</h2>
-            <ul>
-                <li>Lorem</li>
-                <li>ipsum</li>
-                <li>dolor</li>
-                <li>sit</li>
-                <li>amet</li>
-                <li>consectetur</li>
-                <li>adipisicing</li>
-                <li>elit</li>
-            </ul>
-            <h2 id="steps">Steps</h2>
-            <ol>
-                <li>Ex, quo nulla non eos illum blanditiis corrupti dignissimos minus minima cumque, reiciendis
-                    laudantium
-                    ab
-                    rerum debitis sed velit.</li>
-                <li>Quasi atque perferendis voluptas sit temporibus minima, ea quo.</li>
-                <li>Inventore nobis quod totam quos quo explicabo aut, delectus quae officiis.</li>
-                <li>Voluptas, sit delectus.</li>
-                <li>Deserunt qui quos tempora ab dolor numquam vero, rem commodi saepe accusantium corporis harum
-                    quisquam
-                    tenetur ea voluptatibus odit soluta!</li>
-            </ol>
+            <div class="color">
+                <h2 id="ingredients">Ingredients</h2>
+                <ul>
+                    <li>Lorem</li>
+                    <li>ipsum</li>
+                    <li>dolor</li>
+                    <li>sit</li>
+                    <li>amet</li>
+                    <li>consectetur</li>
+                    <li>adipisicing</li>
+                    <li>elit</li>
+                </ul>
+            </div>
+            <div class="color">
+                <h2 id="steps">Steps</h2>
+                <ol>
+                    <li>Ex, quo nulla non eos illum blanditiis corrupti dignissimos minus minima cumque, reiciendis
+                        laudantium
+                        ab
+                        rerum debitis sed velit.</li>
+                    <li>Quasi atque perferendis voluptas sit temporibus minima, ea quo.</li>
+                    <li>Inventore nobis quod totam quos quo explicabo aut, delectus quae officiis.</li>
+                    <li>Voluptas, sit delectus.</li>
+                    <li>Deserunt qui quos tempora ab dolor numquam vero, rem commodi saepe accusantium corporis harum
+                        quisquam
+                        tenetur ea voluptatibus odit soluta!</li>
+                </ol>
+            </div>
         </div>
     </div>
 </body>
