--- a/recipes/lobster-alfredo.html
+++ b/recipes/lobster-alfredo.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lobster Alfredo</title>
+    <link rel="stylesheet" href="lobster-alfredo.css">
 </head>
 
 <body>
