--- a/recipes/shrimp-and-sausage-gumbo.html
+++ b/recipes/shrimp-and-sausage-gumbo.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shrimp and Sausage Gumbo</title>
+    <link rel="stylesheet" href="shrimp-and-sausage-gumbo.css">
 </head>
 
 <body>
