Add image attributions
I added image attributions for the background image, conch fritters, lobster alfredo, and shrimp and sausage gumbo images on the homepage. I also reduced the div's bottom margin so a user can see all of the attributions without scrolling on the homepage. I also added attributions for the conch fritters, lobster alfredo, and shrimp and sausage gumbo images on the conch fritters, lobster alfredo, and shrimp and sausage gumbo recipe web pages respectively.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
                     Sausage Gumbo</a></li>
         </ul>
     </div>
+    <p>Background <a class="attribution"
+            href="https://www.freepik.com/free-vector/red-white-gingham-pattern_2602853.htm#query=red%20white%20checkered%20background&position=7&from_view=keyword&track=ais&uuid=9e53b489-027c-4169-a3bd-2a9dddb0df00">Image
+            by kjpargeter</a> on Freepik</p>
+    <p><a class="attribution" href="https://www.pinterest.com/pin/421860690064628397/">Conch Fritter Image</a> from
+        Shelly Mitchell on Pinterest</p>
+    <p><a class="attribution" href="https://realhousemoms.com/lobster-alfredo-recipe/">Lobster Alfredo Image</a> from
+        Aubrey on realhousemoms.com</p>
+    <p><a class="attribution" href="https://thealmondeater.com/shrimp-and-sausage-gumbo/">Shrimp and Sausage Gumbo
+            Image</a> from Erin on thealmondeater.com</p>
 </body>
 
 </html>
