--- a/recipes/conch-fritters.html
+++ b/recipes/conch-fritters.html
@@ -14,6 +14,9 @@
         <div class="left">
             <img src="https://i.pinimg.com/originals/74/c8/43/74c8431b7d9e6010debe04cce6aa6c2b.jpg"
                 alt="conch fritters">
+            <p class="attribution"><a href="https://www.pinterest.com/pin/421860690064628397/">Conch Fritter Image</a>
+                from
+                Shelly Mitchell on Pinterest</p>
             <div class="color">
                 <h2>Description</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores veniam repellat cumque dolor quia
